Changes in image editor; minor fixes in files live data loading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -817,4 +817,6 @@
 
     <!-- Image editor activity label -->
     <string name="image_editor">Amaze Image Editor</string>
+    <!-- Failed while loading docx file -->
+    <string name="failed_to_load_document">Failed to load document</string>
 </resources>
